.kubernetes/manifests/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-gateway
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: banking-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - external-gateway
  http:
  - match:
    - uri:
        prefix: /Banking
    route:
    - destination:
        host: banking-service.default.svc.cluster.local
        port:
          number: 80
